syntax = "proto3";
option csharp_namespace = "OzonEdu.StockApi.Grpc";
package StockApi;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service StockApiGrpc {
  rpc GetAllStockItems (google.protobuf.Empty) returns (GetAllStockItemsResponse);
  rpc AddStockItem (AddStockItemRequest) returns (google.protobuf.Empty);
}

message GetAllStockItemsResponse {
  repeated GetAllStockItemsResponseUnit stocks = 1;
}

message GetAllStockItemsResponseUnit {
  int64 item_id = 1;
  string item_name = 2;
  int32 quantity = 3;
}

message AddStockItemRequest {
  string item_name = 1;
  int32 quantity = 2;
}